--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
 
 </head>
 <body>
+  <div class="main">
+    <div class="second">
+
+
+  <img class="omelette" src="/assets/images/image-omelette.jpeg" alt="omelette">
+  <div class="third">
+
   <h1>Simple Omelette Recipe</h1>
   
   <p class="paragraph-1">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
     to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
   
-  <div class="preparation-box"></div>
+  <div class="preparation-box">
+    <div class="preparation-content">
+    <h3>Preparation time</h3>
+    <ul>
+      <li><b>Total</b>: Approximately 10 minutes</li>
+      <li> <b>Preparation</b> : 5 minutes</li>
+      <li><b>Cooking</b>: 5 minutes</li>
+    </ul>
+  </div>
+
+  </div>
   
-  <h3>Preparation time</h3>
-<ul>
-  <li>Total: Approximately 10 minutes</li>
-  <li>  Preparation: 5 minutes</li>
-  <li>Cooking: 5 minutes</li>
-</ul>
+
   
 
   
@@ -37,28 +49,28 @@
 </ul>
   
   
-  
+  <hr>
   
   <h2>Instructions</h2>
 
   
 <ol>
-  <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+  <li><b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
     You can add a tablespoon of water or milk for a fluffier texture.</li>
-  <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-  <li>  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+  <li><b>Heat the pan</b>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+  <li><b>Cook the omelette</b>  : Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
     the eggs evenly coat the surface.</li>
-  <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+  <li><b>Add fillings (optional)</b> : When the eggs begin to set at the edges but are still slightly runny in the 
     middle, sprinkle your chosen fillings over one half of the omelette.</li>
-  <li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+  <li><b>Fold and serve</b>: As the omelette continues to cook, carefully lift one edge and fold it over the 
     fillings. Let it cook for another minute, then slide it onto a plate.</li>
-  <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+  <li><b>Enjoy</b>: Serve hot, with additional salt and pepper if needed.</li>
 </ol>
   
 
   
 
-
+<hr>
 
   
 
@@ -70,23 +82,39 @@
 <p class="paragraph-2">  The table below shows nutritional values per serving without the additional fillings.
 </p>
 <table>
-  
+  <tr>
+    <td>  Calories</td>
+    <td class="weight">277kcal</td>
+  </tr>
+  <tr>
+    <td>  Carbs</td>
+    <td class="weight">0g</td>
+  </tr>
+  <tr>
+    <td>  Protein</td>
+    <td class="weight">20g</td>
+  </tr>
+  <tr>
+    <td>  Fat</td>
+    <td class="weight">22g</td>
+  </tr>
 </table>
-  Calories
-  277kcal
+</div>
 
-  Carbs
-  0g
 
-  Protein
-  20g
-
-  Fat
-  22g
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+  
+  
+
+  
+</div>
+  
+
+  
+  
+  
+</div>
+
 </body>
 </html>
